stopping scroll on ios safari

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ html, body {
   padding: 0;
   height: 100%; 
   width: 100%;
-  overflow: hidden
+  overflow: hidden;
+  touch-action: none;
+  -webkit-overflow-scrolling: none;
+  overscroll-behavior: none;
 }
 
 canvas {
